--- a/src/runtime-core-v2/index.html
+++ b/src/runtime-core-v2/index.html
@@ -10,5 +10,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script type="module" src="test-case.js"></script>
+  <script type="module" src="test-diff.js"></script>
 </html>
