--- a/src/runtime-core-v2/index.html
+++ b/src/runtime-core-v2/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="app"></div>
   </body>
+  <script type="module" src="test-dom.js"></script>
   <script type="module" src="test-diff.js"></script>
 </html>
