feat: mount component

--- a/src/runtime-core-v2/index.html
+++ b/src/runtime-core-v2/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="app"></div>
   </body>
-  <script type="module" src="test-dom.js"></script>
-  <script type="module" src="test-diff.js"></script>
+  <script type="module" src="test-component.js"></script>
+  <!-- <script type="module" src="test-dom.js"></script> -->
+  <!-- <script type="module" src="test-diff.js"></script> -->
 </html>
