--- a/src/runtime-core-v2/index.html
+++ b/src/runtime-core-v2/index.html
@@ -10,7 +10,10 @@
   <body>
     <div id="app"></div>
   </body>
-  <script type="module" src="test-component.js"></script>
-  <!-- <script type="module" src="test-dom.js"></script> -->
-  <!-- <script type="module" src="test-diff.js"></script> -->
+
+  <!-- <script type="module" src="./__test__/a.js"></script> -->
+  <script type="module" src="./__test__/test-async-component.js"></script>
+  <!-- <script type="module" src="./__test__/test-component.js"></script> -->
+  <!-- <script type="module" src="./__test__/test-dom.js"></script> -->
+  <!-- <script type="module" src="./__test__/test-diff.js"></script> -->
 </html>
